--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
+
 <!DOCTYPE html>
-    <html>
-    <body>
-        <h1>Hello World</h1>
-        <p>I'm hosted with GitHub Pages.</p>
-    </body>
+<html>
+<body>
+<script> window.location.href = "https://play.google.com/store/apps/developer?id=Bru"</script>
+</body>
 </html>
