Added app-ads.txt and unpdate index

--- a/index.html
+++ b/index.html
@@ -1,7 +1,10 @@
 
 <!DOCTYPE html>
-<html>
-<body>
-<script> window.location.href = "https://play.google.com/store/apps/developer?id=Bru"</script>
-</body>
+    <html>
+    <body>
+        <button id="play" onclick="javascript:link()"><img style="width: 100px;" src="https://i.pinimg.com/originals/71/42/62/714262829697e9749a4aa86b3c1f5538.png"></button>
+    <script> function link(){
+        window.location.href = "https://play.google.com/store/apps/developer?id=Bru";
+    }</script>
+    </body>
 </html>
