--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>F1 Api test</title>
+<title>F1 Project</title>
 <script type="text/javascript" src="https://code.jquery.com/jquery-1.7.1.min.js"></script>
 <script src="https://d3js.org/d3.v7.min.js"></script>
   <style>
@@ -14,7 +14,7 @@
       p {
         position: fixed;
         right: 0;
-        top: 0;
+        bottom: 0;
         size: 25%;
       }
   </style>
