--- a/index.html
+++ b/index.html
@@ -21,9 +21,7 @@
 </head>
   <body style="background-color:powderblue;">
     <select name="track" id="track"></select>
-    <select name="driver" id="driver">
-      <option value="44">Lewis Hamilton</option>
-    </select>
+    <select name="driver" id="driver"></select>
     <p><b>Attribute Bars:</b> Can be clicked and the track map will show that attribute for the selected driver<br>
        <b>Timeline Rect:</b> Can be click to show current timestap where you click, can also use arrowkeys to jump one data point at a time <br>
        <br>
