--- a/index.html
+++ b/index.html
@@ -22,10 +22,12 @@
   <body style="background-color:powderblue;">
     <select name="track" id="track"></select>
     <select name="driver" id="driver"></select>
-    <p><b>Attribute Bars:</b> Can be clicked and the track map will show that attribute for the selected driver<br>
-       <b>Timeline Rect:</b> Can be click to show current timestap where you click, can also use arrowkeys to jump one data point at a time <br>
+    <p><b>Attribute Bars:</b> You can click the bars to display the attribute on the track map!<br>
+       <b>Timeline Rect:</b>You can jump on the timeline by clicked at the timeline box below the track map, you can also increment by 1 data point by pressing arrow keys left/right<br>
        <br>
-       Dots are colored based on the actual colors of the team, and first driver has black outline, meanwhile second driver has yellow outline
+       Dots are colored based on 1st/2nd drivers, where 1st has black outline and 2nd has yellow outline. Keep in mind the you currently cannot select the view driver, <br>
+        although the selected driver is always the winner
+      <br>
       <br>
       <b>Note:</b> Some tracks do not have a track outline and thus only the actual raceline will be rendered: With outline:<br>
        Austrian, Bahrain, Belgian, British, Dutch, Italian, Russian, Styrian
