Even more fixes

--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
   </style>
 </head>
   <body style="background-color:powderblue;">
-    <select name="track" id="track"></select>
-    <select name="driver" id="driver"></select>
+    <label for="track">Tracks:</label><select name="track" id="track"></select>
+    <label for="driver">Drivers: NOT WORKING:</label><select name="driver" id="driver"></select>
     <p><b>Attribute Bars:</b> You can click the bars to display the attribute on the track map!<br>
        <b>Timeline Rect:</b>You can jump on the timeline by clicked at the timeline box below the track map, you can also increment by 1 data point by pressing arrow keys left/right<br>
        <br>
