--- a/index.html
+++ b/index.html
@@ -22,6 +22,26 @@
   <body style="background-color:powderblue;">
     <label for="track">Tracks:</label><select name="track" id="track"></select>
     <label for="driver">Drivers: NOT WORKING:</label><select name="driver" id="driver"></select>
+    <label for="nr_drivers">Nr of Drivers:</label><select name="nr_drivers" id="nr_drivers">
+      <option>1</option>
+      <option>2</option>
+      <option>3</option>
+      <option>4</option>
+      <option>5</option>
+      <option>6</option>
+      <option>7</option>
+      <option>8</option>
+      <option>9</option>
+      <option>10</option>
+      <option>11</option>
+      <option>12</option>
+      <option>13</option>
+      <option>14</option>
+      <option>15</option>
+      <option>16</option>
+      <option>17</option>
+      <option>18</option>
+    </select>
     <p><b>Attribute Bars:</b> You can click the bars to display the attribute on the track map!<br>
        <b>Timeline Rect:</b>You can jump on the timeline by clicked at the timeline box below the track map, you can also increment by 1 data point by pressing arrow keys left/right<br>
        <br>
@@ -30,7 +50,7 @@
       <br>
       <br>
       <b>Note:</b> Some tracks do not have a track outline and thus only the actual raceline will be rendered: With outline:<br>
-       Austrian, Bahrain, Belgian, British, Dutch, Italian, Russian, Styrian
+       Austrian, Bahrain, British, Dutch, Italian, Russian, Styrian
     </p>
       <script src="js/dataAPI.js"></script>
       <script src="js/Consts.js"></script>
